--- a/config.json
+++ b/config.json
@@ -1,7 +1,8 @@
 {
   "PREFIX": ",", 
   "EMBED_COLOR": "#c9befb",
-  "DISCORD_BOT_TOKEN": "ODUxMTcyNDgxMjA0NDg2MTc2.YL0aJQ.LCbuNOvD0Tp6t7s6uyCCD0z4KTo",
+  "DISCORD_BOT_TOKEN": "ODUxMTcyNDgxMjA0NDg2MTc2.YL0aJQ.xlH28Z2fRShYvwPn5wr1TEACL9c",
   "LASTFM_API_KEY": "62e2adfbb2f28bd4455d1280dd8f1acf",
-  "OWNER": "saf#1185"
+  "PASSWORD": "wintons123",
+  "OWNER": "safi#1185"
 }
