--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "esm": "^3.2.25",
     "lowdb": "^1.0.0",
     "moment": "^2.29.1",
+    "mongoose": "^5.11.14",
     "path": "^0.12.7",
+    "sequelize": "^6.6.5",
+    "sqlite3": "^5.0.0",
     "typescript": "^4.1.2"
   },
   "devDependencies": {
